feat(Env & Random) (#1)
* feat(Env & Random)

* Updated .idea/inspectionProfiles/

* Updated .idea/codeStyles/

* Update Env.java

---------

Co-authored-by: TriNextTony <ext.jenkins@trinext.de>